# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1266 2013/05/16 00:34:25 zmedico Exp $

*portage-2.2.0_alpha175 (16 May 2013)

  16 May 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha175.ebuild,
  portage-9999.ebuild:
  2.2.0_alpha175 version bump. This includes all of the fixes in 2.1.12. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.12 (16 May 2013)

  16 May 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.12.ebuild:
  2.1.12 version bump. This fixes bug #469338 (use safe cwd for python-based
  ebuild helpers) and bug #469888 (use FETCHCOMMAND for proper validation of ssl
  certs for https binhosts). This release also enables FEATURES=preserve-libs by
  default (see the make.conf man page). Bug #468524 tracks all bugs fixed since
  portage-2.1.11.62.

  12 May 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.6.7_p1.ebuild:
  Remove obsolete python-selinux dep for bug #469520.

  06 May 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.55.ebuild,
  portage-2.1.11.62.ebuild, portage-2.1.11.63.ebuild,
  portage-2.2.0_alpha173.ebuild, portage-2.2.0_alpha174.ebuild,
  portage-9999.ebuild:
  Install /var/log/portage/elog for bug #415911.

*portage-2.2.0_alpha174 (03 May 2013)

  03 May 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha174.ebuild:
  2.2.0_alpha174 version bump. This includes all of the fixes in 2.1.11.63. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.63 (03 May 2013)

  03 May 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.63.ebuild:
  2.1.11.63 version bump. This fixes bug #364427 (RESTRICT=preserve-libs
  support), bug #466116 (add repoman --include-arches option), bug #466844
  (preserve SHELL variable setting by ebuilds), bug #467622 (ACCEPT_RESTRICT
  support), bug #467886 (normalize slashes in ${D}/${D} QA message), and bug